--- a/covid/package.json
+++ b/covid/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "react": "16.11.0",
+    "react-geocode": "^0.2.1",
     "react-native": "0.62.2",
     "react-native-maps": "0.27.1"
   },
